--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "node": ">= 7.10.1"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "promise": "^8.0.1",
-    "stream-to-promise": "^2.2.0"
+    "express-async-wrap": "^1.0.0",
+    "js-sha256": "^0.9.0",
+    "redis": "^2.8.0"
   }
 }
